--- a/Mohd_Taufique_Notebook__Airbnb_Bookings_Analysis_Capstone_Project.ipynb
+++ b/Mohd_Taufique_Notebook__Airbnb_Bookings_Analysis_Capstone_Project.ipynb
@@ -33,7 +33,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/MOHD-TAUFIQUE/Airbnb-EDA_Capstone-Project/blob/main/Mohd_Taufique_Notebook__Airbnb_Bookings_Analysis_Capstone_Project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/MOHD-TAUFIQUE/Airbnb-Bookings-Analysis_Capstone-Project/blob/main/Mohd_Taufique_Notebook__Airbnb_Bookings_Analysis_Capstone_Project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -150,7 +150,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Data Exploration and variable identification"
+        "## Data Exploration and variable identification"
       ],
       "metadata": {
         "id": "Dr-5jM8KpHIh"
@@ -554,6 +554,32 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Below are the Description of different attributes present in this dataset.**\n",
+        "\n",
+        "1. id : a unique id identifying an airbnb lisitng\n",
+        "2. name : name representating the accomodation\n",
+        "3. host_id : a unique id identifying an airbnb host\n",
+        "4. host_name : name under whom host is registered\n",
+        "5. neighbourhood_group : a group of area\n",
+        "6. neighbourhood : area falls under neighbourhood_group\n",
+        "7. latitude : coordinate of listing\n",
+        "8. longitude : coordinate of listing\n",
+        "9. room_type : type to categorize listing rooms\n",
+        "10. price : price of listing\n",
+        "11. minimum_nights : the minimum nights required to stay in a single visit\n",
+        "12. number_of_reviews : total count of reviews given by visitors\n",
+        "13. last_review : date of last review given\n",
+        "14. reviews_per_month : rate of reviews given per month\n",
+        "15. calculated_host_listings_count : total no of listing registered under the host\n",
+        "16. availability_365 : the number of days for which a host is available in a year."
+      ],
+      "metadata": {
+        "id": "y3Jh2fxJwvFY"
+      }
     },
     {
       "cell_type": "code",
@@ -1094,7 +1120,7 @@
         "id": "ezPLzU-GZ9Lq",
         "outputId": "8a5baee5-c15b-4b98-c1d9-fcca2b464159"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1836,17 +1862,6 @@
     {
       "cell_type": "code",
       "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "2oxTEjeVaVFn"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "airbnb_df['host_name'].nunique() #unique hosts"
       ],
       "metadata": {
@@ -1941,7 +1956,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Data Analysis and Visualization.**"
+        "## **Data Analysis and Visualization.**"
       ],
       "metadata": {
         "id": "t5izGesEt4g3"
@@ -3667,7 +3682,7 @@
         "id": "jWtXTaNqX7fA",
         "outputId": "748fe182-c45d-4982-f321-abecafa97b54"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
